fixed bug where p text was not visible

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ h1:hover {
     cursor: pointer;
 }
 
+p {
+    color: white;
+}
+
 .font-large {
     font-size: 7rem;
 }
